# dust-utils

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
aiUtils/: ai_chat.py  openrouter_credits.py
api/: __init__.py  aliyun_ocr.py
dbUtils/: __init__.py
fileUtils/: __init__.py  cache_utils.py  pip_utils.py
src/dust_utils/: __init__.py  logger_setup.py
src/dust_utils/ai_utils/: __init__.py
src/dust_utils/api/: aliyun_ocr.py  api_utils.py  rhlt_api.py
src/dust_utils/db_utils/: mysql_client.py
src/dust_utils/file_utils/: md_to_docx.py  word_utils.py  zip_utils.py
src/dust_utils/wps_utils/: excel_utils.py  office_utils.py
wpsUtils/: office_base.py  word_utils.py
wxUtils/: __init__.py  mini_alert.py  wx_utils.py
